# web-app

./: .gitignore  .server_update.sh.kate-swp  README.md  TODO.txt  app.py  deploy_server.sh  docker-compose.yml  dockerfile  pyproject.toml  readme.txt  requirements.txt  server_commands.txt  server_deploy.sh  server_update.sh
.github/workflows/: test_only.yml
assets/: blockquote.css  dpr.js  full_page.css  tooltip.js
components/: label.py  popup_box.py  split_pane.py
model/: distribution.py  manifold.py  sampling_schema.py  selfcontained_distribution.py
model/cylinder/: cylinder.py
model/distributions/: distribution_loader.py
model/distributions/conditional/: conditional.py  info_text.md
model/distributions/cylinder/: cylinder_distribution.py  cylinder_sampling_schema.py
model/distributions/cylinder/partially_wraped_normal/: cartesian.py  fibonacci_frolov.py  fibonacci_kronecker.py  fibonacci_rank_1.py  frolov.py  improved_frolov.py  partially_warpped_normal.py  random.py
model/distributions/cylinder/uniform/: cartesian.py  fibonacci_kronecker.py  fibonacci_rank_1.py  random.py  uniform.py
model/distributions/gaus1d/: gaus1d.py  info_text.md  info_text.py
model/distributions/gaus2d/: gaus2d.py  info_text.md
model/distributions/sphere/: random.py  random_test.py  sphere_distribution.py  sphere_sampling_schema.py  vonmises_fisher.py
model/distributions/sphere/bingham/: bingham.py  random.py
model/distributions/sphere/kent/: kent.py  random.py
model/distributions/sphere/uniform/: cartesian.py  fibonacci_rank_1.py  fibonachi_lattice.py  random.py  uniform.py
model/distributions/sphere/vonmises_fisher/: cartesian.py  fibonachi.py  random.py  vonmises_fisher.py
model/distributions/sphere/watson/: benchmark_fib_starts.py  cartesian.py  fibonachi.py  fibonachi_rank1.py  random.py  random_sampling.py  watson.py
model/distributions/torus/: random.py  torus_distribution.py  torus_sampling_schema.py
model/sphere/: sphere.py
model/torus/: torus.py
myenv/Scripts/: activate  activate.bat
pages/: Gauss1D.py  Gauss2D.py  conditional.py  cylinder.py  gauss1D.py  gauss2D.py  home.py  joint.py  sampling.py  sampling_test.py  sphere.py  sphere_vtk.py  torus.py
renderer/: Object3DAnd2DRenderer.py  Object3DRenderer.py  PlotSettings2d.py  object_3D_and_2D_renderer.py  object_3D_renderer.py  plot_settings_2d.py  renderer.py  selfcontained_distribution_renderer.py
tests/: end_to_end_test.py
util/: cartesian_util.py  gaus_util.py  sampling_test.py
util/selectors/: selector.py  silder_log.py  silder_manual_input_wrapper.py  slider.py  slider_fib.py  slider_float.py  slider_pi.py  slider_square.py
(+13 files in other folders)
