[project]
name = "web-app"
version = "0.1.0"
description = "Interactive Visualization Webapp with Plotly/Dash"
authors = [
    {name = "Vlad Korsakov",email = "ulqba@student.kit.edu"},
    {name = "Daniel Frisch",email = "daniel.frisch@kit.edu"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dash (>=2.16,<3.0)",
    "dash-bootstrap-components (>=1.6,<2.0)",
    "numpy (>=1.26,<2.0)",
    "dash-mantine-components (>=0.14,<0.15)",
    "pandas (>=2.2,<3.0)",
    "dash-vtk (>=0.0.9,<0.0.10)",
    "dash-resizable-panels (>=0.1.0,<0.2.0)",
    "scipy (>=1.13,<2.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sphstat (>=1.0.6,<2.0.0)",
    "pyrecest @ git+https://github.com/KIT-ISAS/pyRecEst.git@002c7757e2a5a81e4e57da5c1b657c5f9bd5cf6e",
    "kent-distribution @ git+https://github.com/Vlad-Kor/kent_distribution",
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "dash[testing] (>=2.16,<3.0)",
    "pyperf (>=2.9.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

